common/istio/istio-install/overlays/oauth2-proxy/istio-ingressgateway-lb-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: "<changeme-ingress-lb-name"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"

spec:
  type: LoadBalancer
